testsuite/tests/linear/should_fail/LinearNoExt.stderr

LinearNoExt.hs:3:14: error:
    Illegal use of linear functions
    Suggested fix: Perhaps you intended to use LinearTypes
